feat: set STEAM_GAME X11 window property based on SteamAppId environment variable